# dumpseed

./: CHANGELOG  Makefile  Makefile.in  README  README.md  acconfig.h  config.cache  config.status  configure  configure.in  mkinstalldirs  verpackage
include/: dcc_config.h  dcc_config.h.in  dcc_misc.h  dcc_misc_proto.h  dcc_seed.h  dcc_std.h  dcc_time.h  dcc_time_proto.h  poolclasses.h  seed_comp.h  seed_data.h  seed_data_proto.h  stationidx.h  tapeinfo.h
include/seed/: itemlist.h  seed_abbrevs.h  seed_blockettes.h  seed_comp_proto.h  seed_lbase.h  seed_proto.h  seed_responses.h  seed_select.h  seed_spans.h  seed_statchan.h  select_proto.h
src/apps/: Makefile  Makefile.in
src/apps/LISS/: Makefile  Makefile.in
src/libs/: Makefile  Makefile.in
src/libs/dcc_misc/: Makefile  Makefile.in  bombopen.c  bombout.c  calctime.c  chansubs.c  compat_strerror.c  ctx_file.c  dataswaps.c  dcc_env.c  envfile.c  fixopen.c  getmyname.c  itemlist.c  log.c  readenv.c  readline.c  safemem.c  select.c_obs  spawncommand.c  storeenv.c  strfuns.c  tapfio_posix.c  watchdog.c  wildmatch.c
src/libs/dcc_seed/: Makefile  Makefile.in  diemsg.c  seed_blockettes.c  seed_comments.c  seed_comp.c  seed_data.c  seed_data_dec.c  seed_dec_16.c  seed_dec_32.c  seed_dec_ascii.c  seed_dec_cdsn.c  seed_dec_seed.c  seed_dec_sro.c  seed_dec_usnsn.c  seed_dicts.c  seed_membase.c  seed_misc.c  seed_responses.c  seed_statchan.c  seed_write.c  sel_mem.c
src/libs/dcc_time/: Makefile  Makefile.in  st_addtodelta.c  st_addtotime.c  st_cleandate.c  st_deltacomp.c  st_deltaprint.c  st_deltatoms.c  st_difftimes.c  st_flttotime.c  st_formatdate.c  st_formdelta.c  st_getjulian.c  (+21 more)
src/utils/: Makefile  Makefile.in  make_proto.c
(+51 files in other folders)
