dnl Process this file with autoconf to produce a configure script.

AC_INIT(include/dcc_std.h)
AC_CONFIG_HEADER(include/dcc_config.h)
#AC_CANONICAL_SYSTEM
#AC_CANONICAL_HOST
AC_ARG_PROGRAM

dccpackage=`cat $srcdir/verpackage`
dccversion=`cat $srcdir/version`
AC_SUBST(dccpackage)
AC_SUBST(dccversion)
AC_DEFINE_UNQUOTED(DCCPACKAGE, "$dccpackage")
AC_DEFINE_UNQUOTED(DCCVERSION, "$dccversion")

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(math.h)
AC_CHECK_HEADERS(ctype.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(memory.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(stddef.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(sys/mtio.h)
AC_CHECK_HEADERS(sys/ioctl.h)
AC_CHECK_HEADERS(fcntl.h)

AC_C_BIGENDIAN
AC_C_CHAR_UNSIGNED
AC_C_LONG_DOUBLE
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(long)

AC_TYPE_GETGROUPS
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIGNAL
AC_TYPE_SIZE_T
AC_TYPE_UID_T

AC_CHECK_LIB(posix4, nanosleep)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, gethostbyname)

AC_HEADER_STDC
AC_HEADER_TIME

AC_CHECK_FUNCS(strchr)
AC_CHECK_FUNCS(memcpy)
AC_CHECK_FUNCS(nanosleep)
AC_CHECK_FUNCS(usleep)
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile \
	src/utils/Makefile \
	src/libs/Makefile \
		src/libs/dcc_time/Makefile \
		src/libs/dcc_misc/Makefile \
		src/libs/dcc_seed/Makefile \
		src/libs/steim123/Makefile \
	src/apps/Makefile \
		src/apps/LISS/Makefile \
			src/apps/LISS/dumpseed/Makefile \
			src/apps/LISS/seedfilter/Makefile \
			src/apps/LISS/seedport/Makefile \
			src/apps/LISS/seedforker/Makefile)

